--- a/cekOut.html
+++ b/cekOut.html
@@ -41,8 +41,8 @@
                     </div>
                 </div>
                 <div class="button_daftar">
-                    <a href="" class="btn shadow btn-warning m_s_70 mt-5 me-3 b_r px-4 text-white">Mendaftar</a>
-                    <a href="" class="btn shadow btn-primary mt-5 me-3 b_r px-4 text-white">Masuk</a>
+                    <a href="daftar.html" class="btn shadow btn-warning m_s_70 mt-5 me-3 b_r px-4 text-white">Mendaftar</a>
+                    <a href="cekOut.html" class="btn shadow btn-primary mt-5 me-3 b_r px-4 text-white">Masuk</a>
                 </div>
             </div>
         </div>
