--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             </div>
         </div>
         <!-- end sidebar -->
+        <!-- tak coba -->
     </header>
 
     <!-- slider -->
@@ -77,7 +78,7 @@
     <!-- main content -->
     <div class="row mt-5">
         <div class="col-lg-11 col-md-11 col-sm-11 col-11 m-auto mb-2">
-            <h4 class="text-white"><b>Mobile Game</b></h4>
+            <h4 class="text-white"><b>Game PC</b></h4>
             <div class="row">
                 <!-- card menu -->
                 <div class="col-lg-2 md-col-4 col-4 col-sm-4">
@@ -151,7 +152,7 @@
 
     <div class="row mt-5">
         <div class="col-lg-11 col-md-11 col-sm-11 col-11 m-auto mb-2">
-            <h4 class="text-white"><b>Mobile Game</b></h4>
+            <h4 class="text-white"><b>Game PC</b></h4>
             <div class="row">
                 <!-- card menu -->
                 <div class="col-lg-2 md-col-4 col-4 col-sm-4">
@@ -225,7 +226,7 @@
 
     <div class="row mt-5">
         <div class="col-lg-11 col-md-11 col-sm-11 col-11 m-auto mb-2">
-            <h4 class="text-white"><b>Mobile Game</b></h4>
+            <h4 class="text-white"><b>Others</b></h4>
             <div class="row">
                 <!-- card menu -->
                 <div class="col-lg-2 md-col-4 col-4 col-sm-4">
