--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-light bg-light fix_nav">
-            <i class="fa-solid fa-bars ms-3 fa-lg m_e_30" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling" aria-controls="offcanvasScrolling"></i>
+            <!-- <i class="fa-solid fa-bars ms-3 fa-lg m_e_30" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling" aria-controls="offcanvasScrolling"></i> -->
             <img src="assets/images/item/codashop.png" alt="" class="h_30">
             <i class="fa-solid fa-info d-lg-none m_e_20" data-bs-toggle="collapse" data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation"></i>
             </button>
