--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
     <link rel="stylesheet" href="assets/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="assets/css/formatter.css">
@@ -75,7 +75,7 @@
     </header>
 
     <!-- slider -->
-    <div class="row">
+    <!-- <div class="row">
         <div class="col-lg-8 col-md-10 col-sm-10 col-11 m-auto">
             <div id="carouselExampleDark" class="carousel carousel-white slide mt_20" data-bs-ride="carousel">
                 <div class="carousel-indicators">
@@ -96,7 +96,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- end slider -->
 
     <!-- main content -->
@@ -105,7 +105,7 @@
             <h4 class="text-white"><b>Game PC</b></h4>
             <div class="row">
                 <!-- card menu -->
-                <div class="col-lg-2 md-col-4 col-4 col-sm-4">
+                <!-- <div class="col-lg-2 md-col-4 col-4 col-sm-4">
                     <a href="cekOut.html" class="text_Dnone">
                         <div class="card shadow-lg mb-5 text-start bg-dark border-0 ">
                             <img class="card-img-top" src="assets/images/item/ml.png" alt="Title">
@@ -114,62 +114,7 @@
                             </div>
                         </div>
                     </a>
-                </div>
-                <!-- card menu -->
-                <div class="col-lg-2 md-col-4 col-4 col-sm-4">
-                    <a href="cekOut.html" class="text_Dnone">
-                        <div class="card shadow-lg mb-5 text-start bg-dark border-0 ">
-                            <img class="card-img-top" src="assets/images/item/ml.png" alt="Title">
-                            <div class="card-body">
-                                <p class="card-text text-center text-white font_9"><b>Mobile Legends</b></p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <!-- card menu -->
-                <div class="col-lg-2 md-col-4 col-4 col-sm-4">
-                    <a href="cekOut.html" class="text_Dnone">
-                        <div class="card shadow-lg mb-5 text-start bg-dark border-0 ">
-                            <img class="card-img-top" src="assets/images/item/ml.png" alt="Title">
-                            <div class="card-body">
-                                <p class="card-text text-center text-white font_9"><b>Mobile Legends</b></p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <!-- card menu -->
-                <div class="col-lg-2 md-col-4 col-4 col-sm-4">
-                    <a href="cekOut.html" class="text_Dnone">
-                        <div class="card shadow-lg mb-5 text-start bg-dark border-0 ">
-                            <img class="card-img-top" src="assets/images/item/ml.png" alt="Title">
-                            <div class="card-body">
-                                <p class="card-text text-center text-white font_9"><b>Mobile Legends</b></p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <!-- card menu -->
-                <div class="col-lg-2 md-col-4 col-4 col-sm-4">
-                    <a href="cekOut.html" class="text_Dnone">
-                        <div class="card shadow-lg mb-5 text-start bg-dark border-0 ">
-                            <img class="card-img-top" src="assets/images/item/ml.png" alt="Title">
-                            <div class="card-body">
-                                <p class="card-text text-center text-white font_9"><b>Mobile Legends</b></p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <!-- card menu -->
-                <div class="col-lg-2 md-col-4 col-4 col-sm-4">
-                    <a href="cekOut.html" class="text_Dnone">
-                        <div class="card shadow-lg mb-5 text-start bg-dark border-0 ">
-                            <img class="card-img-top" src="assets/images/item/ml.png" alt="Title">
-                            <div class="card-body">
-                                <p class="card-text text-center text-white font_9"><b>Mobile Legends</b></p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
@@ -179,7 +124,7 @@
             <h4 class="text-white"><b>Game PC</b></h4>
             <div class="row">
                 <!-- card menu -->
-                <div class="col-lg-2 md-col-4 col-4 col-sm-4">
+                <!-- <div class="col-lg-2 md-col-4 col-4 col-sm-4">
                     <a href="cekOut.html" class="text_Dnone">
                         <div class="card shadow-lg mb-5 text-start bg-dark border-0 ">
                             <img class="card-img-top" src="assets/images/item/ml.png" alt="Title">
@@ -188,62 +133,7 @@
                             </div>
                         </div>
                     </a>
-                </div>
-                <!-- card menu -->
-                <div class="col-lg-2 md-col-4 col-4 col-sm-4">
-                    <a href="cekOut.html" class="text_Dnone">
-                        <div class="card shadow-lg mb-5 text-start bg-dark border-0 ">
-                            <img class="card-img-top" src="assets/images/item/ml.png" alt="Title">
-                            <div class="card-body">
-                                <p class="card-text text-center text-white font_9"><b>Mobile Legends</b></p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <!-- card menu -->
-                <div class="col-lg-2 md-col-4 col-4 col-sm-4">
-                    <a href="cekOut.html" class="text_Dnone">
-                        <div class="card shadow-lg mb-5 text-start bg-dark border-0 ">
-                            <img class="card-img-top" src="assets/images/item/ml.png" alt="Title">
-                            <div class="card-body">
-                                <p class="card-text text-center text-white font_9"><b>Mobile Legends</b></p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <!-- card menu -->
-                <div class="col-lg-2 md-col-4 col-4 col-sm-4">
-                    <a href="cekOut.html" class="text_Dnone">
-                        <div class="card shadow-lg mb-5 text-start bg-dark border-0 ">
-                            <img class="card-img-top" src="assets/images/item/ml.png" alt="Title">
-                            <div class="card-body">
-                                <p class="card-text text-center text-white font_9"><b>Mobile Legends</b></p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <!-- card menu -->
-                <div class="col-lg-2 md-col-4 col-4 col-sm-4">
-                    <a href="cekOut.html" class="text_Dnone">
-                        <div class="card shadow-lg mb-5 text-start bg-dark border-0 ">
-                            <img class="card-img-top" src="assets/images/item/ml.png" alt="Title">
-                            <div class="card-body">
-                                <p class="card-text text-center text-white font_9"><b>Mobile Legends</b></p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <!-- card menu -->
-                <div class="col-lg-2 md-col-4 col-4 col-sm-4">
-                    <a href="cekOut.html" class="text_Dnone">
-                        <div class="card shadow-lg mb-5 text-start bg-dark border-0 ">
-                            <img class="card-img-top" src="assets/images/item/ml.png" alt="Title">
-                            <div class="card-body">
-                                <p class="card-text text-center text-white font_9"><b>Mobile Legends</b></p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
@@ -253,7 +143,7 @@
             <h4 class="text-white"><b>Others</b></h4>
             <div class="row">
                 <!-- card menu -->
-                <div class="col-lg-2 md-col-4 col-4 col-sm-4">
+                <!-- <div class="col-lg-2 md-col-4 col-4 col-sm-4">
                     <a href="cekOut.html" class="text_Dnone">
                         <div class="card shadow-lg mb-5 text-start bg-dark border-0 ">
                             <img class="card-img-top" src="assets/images/item/ml.png" alt="Title">
@@ -262,76 +152,21 @@
                             </div>
                         </div>
                     </a>
-                </div>
-                <!-- card menu -->
-                <div class="col-lg-2 md-col-4 col-4 col-sm-4">
-                    <a href="cekOut.html" class="text_Dnone">
-                        <div class="card shadow-lg mb-5 text-start bg-dark border-0 ">
-                            <img class="card-img-top" src="assets/images/item/ml.png" alt="Title">
-                            <div class="card-body">
-                                <p class="card-text text-center text-white font_9"><b>Mobile Legends</b></p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <!-- card menu -->
-                <div class="col-lg-2 md-col-4 col-4 col-sm-4">
-                    <a href="cekOut.html" class="text_Dnone">
-                        <div class="card shadow-lg mb-5 text-start bg-dark border-0 ">
-                            <img class="card-img-top" src="assets/images/item/ml.png" alt="Title">
-                            <div class="card-body">
-                                <p class="card-text text-center text-white font_9"><b>Mobile Legends</b></p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <!-- card menu -->
-                <div class="col-lg-2 md-col-4 col-4 col-sm-4">
-                    <a href="cekOut.html" class="text_Dnone">
-                        <div class="card shadow-lg mb-5 text-start bg-dark border-0 ">
-                            <img class="card-img-top" src="assets/images/item/ml.png" alt="Title">
-                            <div class="card-body">
-                                <p class="card-text text-center text-white font_9"><b>Mobile Legends</b></p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <!-- card menu -->
-                <div class="col-lg-2 md-col-4 col-4 col-sm-4">
-                    <a href="cekOut.html" class="text_Dnone">
-                        <div class="card shadow-lg mb-5 text-start bg-dark border-0 ">
-                            <img class="card-img-top" src="assets/images/item/ml.png" alt="Title">
-                            <div class="card-body">
-                                <p class="card-text text-center text-white font_9"><b>Mobile Legends</b></p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <!-- card menu -->
-                <div class="col-lg-2 md-col-4 col-4 col-sm-4">
-                    <a href="cekOut.html" class="text_Dnone">
-                        <div class="card shadow-lg mb-5 text-start bg-dark border-0 ">
-                            <img class="card-img-top" src="assets/images/item/ml.png" alt="Title">
-                            <div class="card-body">
-                                <p class="card-text text-center text-white font_9"><b>Mobile Legends</b></p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
 
     <div class="row mt-5">
         <div class="col-lg-11 col-md-11 col-sm-11 col-11 m-auto mb-2">
-            <nav class="navbar shadow-lg mb-5 bg-body rounded">
+            <!-- <nav class="navbar shadow-lg mb-5 bg-body rounded">
                 <div class="container-fluid">
                     <h5 class="mt-1 font_12">Diskon hingga 50% untuk hari ini</h5>
                 </div>
-            </nav>
+            </nav> -->
             <div class="row">
                 <!-- card promo -->
-                <div class="col-lg-3 md-col-6 col-10 col-sm-10 m_auto mb-5">
+                <!-- <div class="col-lg-3 md-col-6 col-10 col-sm-10 m_auto mb-5">
                     <a href="cekOut.html" style="text-decoration: none;">
                         <div class="card border-primary m_min_f">
                             <img class="card-img-top" src="assets/images/item/Penipuan.jpg" alt="Title">
@@ -341,49 +176,13 @@
                             </div>
                         </div>
                     </a>
-                </div>
-                <!-- card promo -->
-                <div class="col-lg-3 md-col-6 col-10 col-sm-10 m_auto mb-5">
-                    <a href="cekOut.html" style="text-decoration: none;">
-                        <div class="card border-primary m_min_f">
-                            <img class="card-img-top" src="assets/images/item/Penipuan.jpg" alt="Title">
-                            <div class="card-body">
-                                <h6 class="font_s">Waspada Penipuan APK</h6>
-                                <p class="card-text font_s">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus, animi.</p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <!-- card promo -->
-                <div class="col-lg-3 md-col-6 col-10 col-sm-10 m_auto mb-5">
-                    <a href="cekOut.html" style="text-decoration: none;">
-                        <div class="card border-primary m_min_f">
-                            <img class="card-img-top" src="assets/images/item/Penipuan.jpg" alt="Title">
-                            <div class="card-body">
-                                <h6 class="font_s">Waspada Penipuan APK</h6>
-                                <p class="card-text font_s">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus, animi.</p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <!-- card promo -->
-                <div class="col-lg-3 md-col-6 col-10 col-sm-10 m_auto mb-5">
-                    <a href="cekOut.html" style="text-decoration: none;">
-                        <div class="card border-primary m_min_f">
-                            <img class="card-img-top" src="assets/images/item/Penipuan.jpg" alt="Title">
-                            <div class="card-body">
-                                <h6 class="font_s">Waspada Penipuan APK</h6>
-                                <p class="card-text font_s">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus, animi.</p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
     <!-- end main content -->
 
-    <footer>
+    <!-- <footer>
         <div class="row mt-5">
             <div class="col-lg-11 col-md-11 col-sm-11 col-11 m-auto mb-2 bg-dark p-4">
                 <h2 class="text-white font_16"><b>GameShop APP</b></h2>
@@ -402,7 +201,7 @@
                 </div>
             </div>
         </div>
-    </footer>
+    </footer> -->
 
     <script src="assets/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/fontawesome/js/all.min.js"></script>
