--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">Navbar</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,10 +46,10 @@
                     </ul>
                 </div>
             </div>
-        </nav>
+        </nav> -->
 
         <!-- sidebar -->
-        <div class="offcanvas offcanvas-start bg_gray" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
+        <!-- <div class="offcanvas offcanvas-start bg_gray" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
             <div class="offcanvas-header">
                 <img src="assets/images/item/codashop.png" alt="" class="h_30">
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -70,7 +70,7 @@
                     <a href="masuk.html" class="btn shadow btn-primary mt-5 me-3 b_r px-4 text-white">Masuk</a>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- end sidebar -->
     </header>
 
