--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <meta name="description" content="">
     <link rel="stylesheet" href="assets/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/fontawesome/css/all.min.css">
-    <link rel="stylesheet" href="assets/css/formatter.css">
+    <!-- <link rel="stylesheet" href="assets/css/formatter.css"> -->
     <title>Game Shope</title>
 </head>
 
 <body>
     <header>
+        <h1>Halo</h1>
         <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">Navbar</a>
@@ -100,12 +101,12 @@
     <!-- end slider -->
 
     <!-- main content -->
-    <div class="row mt-5">
+    <!-- <div class="row mt-5">
         <div class="col-lg-11 col-md-11 col-sm-11 col-11 m-auto mb-2">
             <h4 class="text-white"><b>Game PC</b></h4>
-            <div class="row">
-                <!-- card menu -->
-                <!-- <div class="col-lg-2 md-col-4 col-4 col-sm-4">
+            <div class="row"> -->
+    <!-- card menu -->
+    <!-- <div class="col-lg-2 md-col-4 col-4 col-sm-4">
                     <a href="cekOut.html" class="text_Dnone">
                         <div class="card shadow-lg mb-5 text-start bg-dark border-0 ">
                             <img class="card-img-top" src="assets/images/item/ml.png" alt="Title">
@@ -115,16 +116,16 @@
                         </div>
                     </a>
                 </div> -->
-            </div>
+    <!-- </div>
         </div>
     </div>
 
     <div class="row mt-5">
         <div class="col-lg-11 col-md-11 col-sm-11 col-11 m-auto mb-2">
             <h4 class="text-white"><b>Game PC</b></h4>
-            <div class="row">
-                <!-- card menu -->
-                <!-- <div class="col-lg-2 md-col-4 col-4 col-sm-4">
+            <div class="row"> -->
+    <!-- card menu -->
+    <!-- <div class="col-lg-2 md-col-4 col-4 col-sm-4">
                     <a href="cekOut.html" class="text_Dnone">
                         <div class="card shadow-lg mb-5 text-start bg-dark border-0 ">
                             <img class="card-img-top" src="assets/images/item/ml.png" alt="Title">
@@ -134,16 +135,16 @@
                         </div>
                     </a>
                 </div> -->
-            </div>
+    <!-- </div>
         </div>
     </div>
 
     <div class="row mt-5">
         <div class="col-lg-11 col-md-11 col-sm-11 col-11 m-auto mb-2">
             <h4 class="text-white"><b>Others</b></h4>
-            <div class="row">
-                <!-- card menu -->
-                <!-- <div class="col-lg-2 md-col-4 col-4 col-sm-4">
+            <div class="row"> -->
+    <!-- card menu -->
+    <!-- <div class="col-lg-2 md-col-4 col-4 col-sm-4">
                     <a href="cekOut.html" class="text_Dnone">
                         <div class="card shadow-lg mb-5 text-start bg-dark border-0 ">
                             <img class="card-img-top" src="assets/images/item/ml.png" alt="Title">
@@ -153,20 +154,20 @@
                         </div>
                     </a>
                 </div> -->
-            </div>
+    <!-- </div>
         </div>
     </div>
 
     <div class="row mt-5">
-        <div class="col-lg-11 col-md-11 col-sm-11 col-11 m-auto mb-2">
-            <!-- <nav class="navbar shadow-lg mb-5 bg-body rounded">
+        <div class="col-lg-11 col-md-11 col-sm-11 col-11 m-auto mb-2"> -->
+    <!-- <nav class="navbar shadow-lg mb-5 bg-body rounded">
                 <div class="container-fluid">
                     <h5 class="mt-1 font_12">Diskon hingga 50% untuk hari ini</h5>
                 </div>
             </nav> -->
-            <div class="row">
-                <!-- card promo -->
-                <!-- <div class="col-lg-3 md-col-6 col-10 col-sm-10 m_auto mb-5">
+    <!-- <div class="row"> -->
+    <!-- card promo -->
+    <!-- <div class="col-lg-3 md-col-6 col-10 col-sm-10 m_auto mb-5">
                     <a href="cekOut.html" style="text-decoration: none;">
                         <div class="card border-primary m_min_f">
                             <img class="card-img-top" src="assets/images/item/Penipuan.jpg" alt="Title">
@@ -177,9 +178,9 @@
                         </div>
                     </a>
                 </div> -->
-            </div>
+    <!-- </div>
         </div>
-    </div>
+    </div> -->
     <!-- end main content -->
 
     <!-- <footer>
