--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <link rel="stylesheet" href="assets/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/fontawesome/css/all.min.css">
-    <!-- <link rel="stylesheet" href="assets/css/formatter.css"> -->
+    <link rel="stylesheet" href="assets/css/formatter.css">
     <title>Game Shope</title>
 </head>
 
