--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </nav>
 
         <!-- sidebar -->
-        <!-- <div class="offcanvas offcanvas-start bg_gray" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
+        <div class="offcanvas offcanvas-start bg_gray" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
             <div class="offcanvas-header">
                 <img src="assets/images/item/codashop.png" alt="" class="h_30">
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -71,7 +71,7 @@
                     <a href="masuk.html" class="btn shadow btn-primary mt-5 me-3 b_r px-4 text-white">Masuk</a>
                 </div>
             </div>
-        </div> -->
+        </div>
         <!-- end sidebar -->
     </header>
 
