--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </header>
 
     <!-- slider -->
-    <!-- <div class="row">
+    <div class="row">
         <div class="col-lg-8 col-md-10 col-sm-10 col-11 m-auto">
             <div id="carouselExampleDark" class="carousel carousel-white slide mt_20" data-bs-ride="carousel">
                 <div class="carousel-indicators">
@@ -97,7 +97,7 @@
                 </div>
             </div>
         </div>
-    </div> -->
+    </div>
     <!-- end slider -->
 
     <!-- main content -->
