--- a/index.html
+++ b/index.html
@@ -76,28 +76,28 @@
     </header>
 
     <!-- slider -->
-    <div class="row">
-        <div class="col-lg-8 col-md-10 col-sm-10 col-11 m-auto">
-            <div id="carouselExampleDark" class="carousel carousel-white slide mt_20" data-bs-ride="carousel">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                </div>
-                <div class="carousel-inner">
-                    <div class="carousel-item active" data-bs-interval="10000">
-                        <img src="assets/images/slider/gambar1.png" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item" data-bs-interval="2000">
-                        <img src="assets/images/slider/gambar2.png" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="assets/images/slider/gambar1.png" class="d-block w-100" alt="...">
-                    </div>
-                </div>
+    <!-- <div class="row">
+        <div class="col-lg-8 col-md-10 col-sm-10 col-11 m-auto"> -->
+    <div id="carouselExampleDark" class="carousel carousel-white slide mt_20" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active" data-bs-interval="10000">
+                <img src="assets/images/slider/gambar1.png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item" data-bs-interval="2000">
+                <img src="assets/images/slider/gambar2.png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="assets/images/slider/gambar1.png" class="d-block w-100" alt="...">
             </div>
         </div>
     </div>
+    <!-- </div>
+    </div> -->
     <!-- end slider -->
 
     <!-- main content -->
