--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
     </header>
 
     <!-- slider -->
-    <div class="row">
-        <div class="col-lg-8 col-md-10 col-sm-10 col-11 m-auto" style="overflow-x: hidden;">
+    <div class="row" style="overflow-x: hidden;">
+        <div class="col-lg-8 col-11 m-auto" style="overflow-x: hidden;">
             <div id="carouselExampleDark" class="carousel carousel-white slide mt_20" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
