--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="description" content="">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="assets/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="assets/css/formatter.css">
@@ -12,38 +12,13 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">Navbar</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Dropdown
-                    </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                        </li>
-                    </ul>
-                </div>
+        <nav class="navbar navbar-expand-sm navbar-light bg-light fix_nav">
+            <i class="fa-solid fa-bars ms-3 fa-lg m_e_30" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling" aria-controls="offcanvasScrolling"></i>
+            <img src="assets/images/item/codashop.png" alt="" class="h_30">
+            <i class="fa-solid fa-info d-lg-none m_e_20" data-bs-toggle="collapse" data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation"></i>
+            </button>
+            <div class="collapse navbar-collapse mt-2 ms-3" id="collapsibleNavId">
+                <h6><i>Website top-up terbesar, tercepat dan terpercaya untuk pembelian kredit game dan entertainment.......</i></h6>
             </div>
         </nav>
 
@@ -74,8 +49,8 @@
     </header>
 
     <!-- slider -->
-    <div class="row" style="overflow-x: hidden;">
-        <div class="col-lg-8 col-11 m-auto" style="overflow-x: hidden;">
+    <div class="row">
+        <div class="col-lg-8 col-md-10 col-sm-10 col-11 m-auto">
             <div id="carouselExampleDark" class="carousel carousel-white slide mt_20" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -101,8 +76,63 @@
     <!-- main content -->
     <div class="row mt-5">
         <div class="col-lg-11 col-md-11 col-sm-11 col-11 m-auto mb-2">
-            <h4 class="text-white"><b>Game PC</b></h4>
+            <h4 class="text-white"><b>Mobile Game</b></h4>
             <div class="row">
+                <!-- card menu -->
+                <div class="col-lg-2 md-col-4 col-4 col-sm-4">
+                    <a href="cekOut.html" class="text_Dnone">
+                        <div class="card shadow-lg mb-5 text-start bg-dark border-0 ">
+                            <img class="card-img-top" src="assets/images/item/ml.png" alt="Title">
+                            <div class="card-body">
+                                <p class="card-text text-center text-white font_9"><b>Mobile Legends</b></p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <!-- card menu -->
+                <div class="col-lg-2 md-col-4 col-4 col-sm-4">
+                    <a href="cekOut.html" class="text_Dnone">
+                        <div class="card shadow-lg mb-5 text-start bg-dark border-0 ">
+                            <img class="card-img-top" src="assets/images/item/ml.png" alt="Title">
+                            <div class="card-body">
+                                <p class="card-text text-center text-white font_9"><b>Mobile Legends</b></p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <!-- card menu -->
+                <div class="col-lg-2 md-col-4 col-4 col-sm-4">
+                    <a href="cekOut.html" class="text_Dnone">
+                        <div class="card shadow-lg mb-5 text-start bg-dark border-0 ">
+                            <img class="card-img-top" src="assets/images/item/ml.png" alt="Title">
+                            <div class="card-body">
+                                <p class="card-text text-center text-white font_9"><b>Mobile Legends</b></p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <!-- card menu -->
+                <div class="col-lg-2 md-col-4 col-4 col-sm-4">
+                    <a href="cekOut.html" class="text_Dnone">
+                        <div class="card shadow-lg mb-5 text-start bg-dark border-0 ">
+                            <img class="card-img-top" src="assets/images/item/ml.png" alt="Title">
+                            <div class="card-body">
+                                <p class="card-text text-center text-white font_9"><b>Mobile Legends</b></p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <!-- card menu -->
+                <div class="col-lg-2 md-col-4 col-4 col-sm-4">
+                    <a href="cekOut.html" class="text_Dnone">
+                        <div class="card shadow-lg mb-5 text-start bg-dark border-0 ">
+                            <img class="card-img-top" src="assets/images/item/ml.png" alt="Title">
+                            <div class="card-body">
+                                <p class="card-text text-center text-white font_9"><b>Mobile Legends</b></p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
                 <!-- card menu -->
                 <div class="col-lg-2 md-col-4 col-4 col-sm-4">
                     <a href="cekOut.html" class="text_Dnone">
@@ -120,8 +150,63 @@
 
     <div class="row mt-5">
         <div class="col-lg-11 col-md-11 col-sm-11 col-11 m-auto mb-2">
-            <h4 class="text-white"><b>Game PC</b></h4>
+            <h4 class="text-white"><b>Mobile Game</b></h4>
             <div class="row">
+                <!-- card menu -->
+                <div class="col-lg-2 md-col-4 col-4 col-sm-4">
+                    <a href="cekOut.html" class="text_Dnone">
+                        <div class="card shadow-lg mb-5 text-start bg-dark border-0 ">
+                            <img class="card-img-top" src="assets/images/item/ml.png" alt="Title">
+                            <div class="card-body">
+                                <p class="card-text text-center text-white font_9"><b>Mobile Legends</b></p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <!-- card menu -->
+                <div class="col-lg-2 md-col-4 col-4 col-sm-4">
+                    <a href="cekOut.html" class="text_Dnone">
+                        <div class="card shadow-lg mb-5 text-start bg-dark border-0 ">
+                            <img class="card-img-top" src="assets/images/item/ml.png" alt="Title">
+                            <div class="card-body">
+                                <p class="card-text text-center text-white font_9"><b>Mobile Legends</b></p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <!-- card menu -->
+                <div class="col-lg-2 md-col-4 col-4 col-sm-4">
+                    <a href="cekOut.html" class="text_Dnone">
+                        <div class="card shadow-lg mb-5 text-start bg-dark border-0 ">
+                            <img class="card-img-top" src="assets/images/item/ml.png" alt="Title">
+                            <div class="card-body">
+                                <p class="card-text text-center text-white font_9"><b>Mobile Legends</b></p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <!-- card menu -->
+                <div class="col-lg-2 md-col-4 col-4 col-sm-4">
+                    <a href="cekOut.html" class="text_Dnone">
+                        <div class="card shadow-lg mb-5 text-start bg-dark border-0 ">
+                            <img class="card-img-top" src="assets/images/item/ml.png" alt="Title">
+                            <div class="card-body">
+                                <p class="card-text text-center text-white font_9"><b>Mobile Legends</b></p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <!-- card menu -->
+                <div class="col-lg-2 md-col-4 col-4 col-sm-4">
+                    <a href="cekOut.html" class="text_Dnone">
+                        <div class="card shadow-lg mb-5 text-start bg-dark border-0 ">
+                            <img class="card-img-top" src="assets/images/item/ml.png" alt="Title">
+                            <div class="card-body">
+                                <p class="card-text text-center text-white font_9"><b>Mobile Legends</b></p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
                 <!-- card menu -->
                 <div class="col-lg-2 md-col-4 col-4 col-sm-4">
                     <a href="cekOut.html" class="text_Dnone">
@@ -139,8 +224,63 @@
 
     <div class="row mt-5">
         <div class="col-lg-11 col-md-11 col-sm-11 col-11 m-auto mb-2">
-            <h4 class="text-white"><b>Others</b></h4>
+            <h4 class="text-white"><b>Mobile Game</b></h4>
             <div class="row">
+                <!-- card menu -->
+                <div class="col-lg-2 md-col-4 col-4 col-sm-4">
+                    <a href="cekOut.html" class="text_Dnone">
+                        <div class="card shadow-lg mb-5 text-start bg-dark border-0 ">
+                            <img class="card-img-top" src="assets/images/item/ml.png" alt="Title">
+                            <div class="card-body">
+                                <p class="card-text text-center text-white font_9"><b>Mobile Legends</b></p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <!-- card menu -->
+                <div class="col-lg-2 md-col-4 col-4 col-sm-4">
+                    <a href="cekOut.html" class="text_Dnone">
+                        <div class="card shadow-lg mb-5 text-start bg-dark border-0 ">
+                            <img class="card-img-top" src="assets/images/item/ml.png" alt="Title">
+                            <div class="card-body">
+                                <p class="card-text text-center text-white font_9"><b>Mobile Legends</b></p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <!-- card menu -->
+                <div class="col-lg-2 md-col-4 col-4 col-sm-4">
+                    <a href="cekOut.html" class="text_Dnone">
+                        <div class="card shadow-lg mb-5 text-start bg-dark border-0 ">
+                            <img class="card-img-top" src="assets/images/item/ml.png" alt="Title">
+                            <div class="card-body">
+                                <p class="card-text text-center text-white font_9"><b>Mobile Legends</b></p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <!-- card menu -->
+                <div class="col-lg-2 md-col-4 col-4 col-sm-4">
+                    <a href="cekOut.html" class="text_Dnone">
+                        <div class="card shadow-lg mb-5 text-start bg-dark border-0 ">
+                            <img class="card-img-top" src="assets/images/item/ml.png" alt="Title">
+                            <div class="card-body">
+                                <p class="card-text text-center text-white font_9"><b>Mobile Legends</b></p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <!-- card menu -->
+                <div class="col-lg-2 md-col-4 col-4 col-sm-4">
+                    <a href="cekOut.html" class="text_Dnone">
+                        <div class="card shadow-lg mb-5 text-start bg-dark border-0 ">
+                            <img class="card-img-top" src="assets/images/item/ml.png" alt="Title">
+                            <div class="card-body">
+                                <p class="card-text text-center text-white font_9"><b>Mobile Legends</b></p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
                 <!-- card menu -->
                 <div class="col-lg-2 md-col-4 col-4 col-sm-4">
                     <a href="cekOut.html" class="text_Dnone">
@@ -164,6 +304,42 @@
                 </div>
             </nav>
             <div class="row">
+                <!-- card promo -->
+                <div class="col-lg-3 md-col-6 col-10 col-sm-10 m_auto mb-5">
+                    <a href="cekOut.html" style="text-decoration: none;">
+                        <div class="card border-primary m_min_f">
+                            <img class="card-img-top" src="assets/images/item/Penipuan.jpg" alt="Title">
+                            <div class="card-body">
+                                <h6 class="font_s">Waspada Penipuan APK</h6>
+                                <p class="card-text font_s">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus, animi.</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <!-- card promo -->
+                <div class="col-lg-3 md-col-6 col-10 col-sm-10 m_auto mb-5">
+                    <a href="cekOut.html" style="text-decoration: none;">
+                        <div class="card border-primary m_min_f">
+                            <img class="card-img-top" src="assets/images/item/Penipuan.jpg" alt="Title">
+                            <div class="card-body">
+                                <h6 class="font_s">Waspada Penipuan APK</h6>
+                                <p class="card-text font_s">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus, animi.</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <!-- card promo -->
+                <div class="col-lg-3 md-col-6 col-10 col-sm-10 m_auto mb-5">
+                    <a href="cekOut.html" style="text-decoration: none;">
+                        <div class="card border-primary m_min_f">
+                            <img class="card-img-top" src="assets/images/item/Penipuan.jpg" alt="Title">
+                            <div class="card-body">
+                                <h6 class="font_s">Waspada Penipuan APK</h6>
+                                <p class="card-text font_s">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus, animi.</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
                 <!-- card promo -->
                 <div class="col-lg-3 md-col-6 col-10 col-sm-10 m_auto mb-5">
                     <a href="cekOut.html" style="text-decoration: none;">
