--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         <!-- slider -->
         <div class="row">
-            <div class="col-lg-8 col-md-10 col-sm-10 col-11 m-auto">
+            <div class="col-lg-8 col-md-10 col-sm-10 col-md-12 m-auto">
                 <div id="carouselExampleDark" class="carousel carousel-white slide mt_20" data-bs-ride="carousel">
                     <div class="carousel-indicators">
                         <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -78,7 +78,7 @@
 
         <!-- main content -->
         <div class="row mt-5">
-            <div class="col-lg-11 col-md-11 col-sm-11 col-11 m-auto mb-2">
+            <div class="col-lg-11 col-md-11 col-sm-11 col-12 m-auto mb-2">
                 <h4 class="text-white"><b>Mobile Game</b></h4>
                 <div class="row">
                     <!-- card menu -->
@@ -152,7 +152,7 @@
         </div>
 
         <div class="row mt-5">
-            <div class="col-lg-11 col-md-11 col-sm-11 col-11 m-auto mb-2">
+            <div class="col-lg-11 col-md-11 col-sm-11 col-12 m-auto mb-2">
                 <h4 class="text-white"><b>Mobile Game</b></h4>
                 <div class="row">
                     <!-- card menu -->
@@ -226,7 +226,7 @@
         </div>
 
         <div class="row mt-5">
-            <div class="col-lg-11 col-md-11 col-sm-11 col-11 m-auto mb-2">
+            <div class="col-lg-11 col-md-11 col-sm-11 col-12 m-auto mb-2">
                 <h4 class="text-white"><b>Mobile Game</b></h4>
                 <div class="row">
                     <!-- card menu -->
@@ -300,7 +300,7 @@
         </div>
 
         <div class="row mt-5">
-            <div class="col-lg-11 col-md-11 col-sm-11 col-11 m-auto mb-2">
+            <div class="col-lg-11 col-md-11 col-sm-11 col-12 m-auto mb-2">
                 <nav class="navbar shadow-lg mb-5 bg-body rounded">
                     <div class="container-fluid">
                         <h5 class="mt-1 font_12">Diskon hingga 50% untuk hari ini</h5>
@@ -362,7 +362,7 @@
 
         <footer>
             <div class="row mt-5">
-                <div class="col-lg-11 col-md-11 col-sm-11 col-11 m-auto mb-2 bg-dark p-4">
+                <div class="col-lg-11 col-md-11 col-sm-11 col-12 m-auto mb-2 bg-dark p-4">
                     <h2 class="text-white font_16"><b>GameShop APP</b></h2>
                     <h5 class="text-white mt-4 font_12">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, sed!</h5>
                     <p class="text-white font_9">Lorem ipsum dolor sit amet consectetur, adipisicing elit. A blanditiis quaerat est unde itaque, officiis asperiores, reiciendis quasi ut ea ipsa iste. Dolorem ipsam neque illo tempora accusantium tempore! Libero voluptatum laudantium
