--- a/index.html
+++ b/index.html
@@ -360,6 +360,28 @@
         <!-- end main content -->
     </div>
 
+    <footer>
+        <div class="row mt-5">
+            <div class="col-lg-11 col-md-11 col-sm-11 col-11 m-auto mb-2 bg-dark p-4">
+                <h2 class="text-white font_16"><b>GameShop APP</b></h2>
+                <h5 class="text-white mt-4 font_12">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, sed!</h5>
+                <p class="text-white font_9">Lorem ipsum dolor sit amet consectetur, adipisicing elit. A blanditiis quaerat est unde itaque, officiis asperiores, reiciendis quasi ut ea ipsa iste. Dolorem ipsam neque illo tempora accusantium tempore! Libero voluptatum laudantium totam
+                    sint amet.</p>
+                <div class="row">
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-12 m_fotter">
+                        <ul>
+                            <li><img src="assets/images/footer/facebook.png" alt=""></li>
+                            <li><img src="assets/images/footer/youtube.png" alt=""></li>
+                            <li><img src="assets/images/footer/instagram.png" alt=""></li>
+                            <li><img src="assets/images/footer/tiktok.png" alt=""></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+
     <script src="assets/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/fontawesome/js/all.min.js"></script>
 </body>
