--- a/masuk.html
+++ b/masuk.html
@@ -48,26 +48,29 @@
         <!-- end sidebar -->
     </header>
 
-    <div class="row">
-        <div class="col-lg-11 col-md-11 col-sm-11 col-11 mx-auto">
-            <div class="row">
-                <div class="col-lg-4 col-md-6 col-sm-11 col-11 mx-auto mt_90 text-white">
-                    <h4><b>Masuk</b></h4>
-                    <form>
-                        <div class="mb-3">
-                            <label for="exampleInputEmail1" class="form-label"><small>Email address</small></label>
-                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                        </div>
-                        <div class="mb-3">
-                            <label for="exampleInputPassword1" class="form-label"><small>Password</small></label>
-                            <input type="password" class="form-control" id="exampleInputPassword1">
-                        </div>
-                        <button type="submit" class="btn shadow b_r px-5 btn-primary">Masuk</button>
-                    </form>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-11 col-md-11 col-sm-11 col-11 mx-auto">
+                <div class="row">
+                    <div class="col-lg-4 col-md-6 col-sm-11 col-11 mx-auto mt_90 text-white">
+                        <h4><b>Masuk</b></h4>
+                        <form>
+                            <div class="mb-3">
+                                <label for="exampleInputEmail1" class="form-label"><small>Email address</small></label>
+                                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                            </div>
+                            <div class="mb-3">
+                                <label for="exampleInputPassword1" class="form-label"><small>Password</small></label>
+                                <input type="password" class="form-control" id="exampleInputPassword1">
+                            </div>
+                            <button type="submit" class="btn shadow b_r px-5 btn-primary">Masuk</button>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+
     <script src="assets/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/fontawesome/js/all.min.js"></script>
 </body>
