--- a/cekOut.html
+++ b/cekOut.html
@@ -337,7 +337,7 @@
 
 
     <footer>
-        <div class="container-fluid">
+        <div class="container">
             <div class="row mt-5">
                 <div class="col-lg-11 col-md-11 col-sm-11 col-12 m-auto mb-2 bg-dark p-4">
                     <h2 class="text-white font_16"><b>GameShop APP</b></h2>
